[gd_scene load_steps=7 format=3 uid="uid://bvrdbyuuwul47"]

[ext_resource type="StyleBox" uid="uid://cyh8e12sooiex" path="res://scenes/level_button/level_button_ben.tres" id="1_a8xxy"]
[ext_resource type="Script" path="res://scenes/level_button/level_button_ben.gd" id="2_k0j6w"]
[ext_resource type="Texture2D" uid="uid://c8hf3a5afcdqn" path="res://assets/green_panel.png" id="2_n20e6"]
[ext_resource type="LabelSettings" uid="uid://dt4d8t41tnpa1" path="res://assets/GM_white_32.tres" id="3_qbhy7"]
[ext_resource type="Texture2D" uid="uid://chljvdkrdtthl" path="res://assets/green_checkmark.png" id="4_k1do6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_t0jqg"]
texture = ExtResource("2_n20e6")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="LevelButtonBen" type="Button"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_override_styles/focus = ExtResource("1_a8xxy")
theme_override_styles/hover = SubResource("StyleBoxTexture_t0jqg")
theme_override_styles/pressed = ExtResource("1_a8xxy")
theme_override_styles/normal = ExtResource("1_a8xxy")
script = ExtResource("2_k0j6w")

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "99
"
label_settings = ExtResource("3_qbhy7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckMark" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 25.0
offset_bottom = 24.0
texture = ExtResource("4_k1do6")

[connection signal="pressed" from="." to="." method="_on_pressed"]
